--- a/index.css
+++ b/index.css
@@ -1,5 +1,35 @@
-#root{
+/* #root{
     width: 100px;
     height: 100px;
     background-color: yellowgreen;
+} */
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    background-color: lightgray;
+}
+h1{
+    display: grid;
+    place-items: center;
+}
+.card{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+.block{
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+    background-color: turquoise;
+    margin: 40px;
+}
+.box{
+    width: 20vh;
+    height: 20vh;
+    border-radius: 100%;
+    border-right: 2px solid darkorchid;
+    background-color: turquoise;
+    margin: 40px;
 }
